# sessionizer

./: .gitattributes  .gitignore  Makefile  README.md  admin.html  biome.json  index.html  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  update_lib.patch  vite.config.ts
.agents/: feedback-loop.yml
.github/workflows/: build.yml
scripts/: check-architecture.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  control.rs  device_controller.rs  ipc.rs  lib.rs  main.rs  password.rs  remote_admin.rs  service_main.rs  session.rs  shutdown.rs  state_store.rs  windows_session.rs
src-tauri/tests/: core_logic.rs  device_controller.rs  service_http.rs
src/admin/: AdminApp.tsx  admin.css  api.ts  formatters.test.ts  formatters.ts  main.tsx
src/components/: CountdownTimer.tsx  FatalErrorScreen.tsx  LockScreen.tsx  PasswordInput.tsx  PausedPanel.tsx  RecoveryPrompt.tsx  SettingsPanel.tsx  SetupWizard.tsx  UnlockedPanel.tsx  WarningBanner.tsx
src/hooks/: useConfig.ts  useCountdown.ts
src/lib/: bindings.ts  invoke.ts  warningNotification.test.ts  warningNotification.ts
