[package]
name = "sessionizer"
version = "1.1.0"
description = "Windows parental screen-time limiter"
authors = ["Sessionizer"]
edition = "2021"

[lib]
name = "sessionizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
rand = "0.8"
chrono = "0.4"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
specta = "=2.0.0-rc.20"
specta-typescript = "=0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["javascript", "typescript"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
